<resources>
    <string name="app_name">RSSReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="article_header">Article header</string>
    <string name="article_content">Article content</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_article_detail_screen">ArticleDetailScreen</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="article_date">Article date</string>
    <string name="article_link"><u>View full article</u></string>
    <string name="share">Share</string>
    <string name="title_activity_feed_config_screen">FeedConfigScreen</string>
    <string name="float_add_button">float_add_button</string>
    <string name="feed_config">Configure feeds</string>
    <string name="feed_title">Feed title</string>
    <string name="feed_url">Feed url</string>
    <string name="add_feed">Add Feed</string>
    <string name="type_feed_url">Type feed url</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="failed_to_add_feed">Failed to add new feed.</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete_message">Do you want to delete the feed?</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
</resources>

